--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -8,14 +8,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vincent Kwaku Kpemlie",
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0",
     "clear": "^0.1.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2",
     "inquirer": "^9.2.13",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
